[package]
name = "crabcrack"
version = "0.1.0"
edition = "2021"  # 2024 edition doesn't exist yet
authors = ["Haitham Aljabbari haithamaljabbari1@gmail.com"]

[dependencies]
argon2 = "0.5.3"
bcrypt = "0.17.0"
clap = { version = "4.5.3", features = ["derive"] }  # Fixed version and added derive feature
figlet-rs = "0.1.5"
hex = "0.4.3"
identyhash = "0.1.0"
md-5 = "0.10.6"
ripemd = "0.1.3"
scrypt = "0.11.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
